# ml-split

./: .gitignore  CMakeLists.txt  main.cpp
include/: ISplitter.hpp
src/: ISplitter.cpp
